--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Hp\\Documents\\Python\\web\\flask_env\\Scripts\\python.exe"
+    "python.pythonPath": "/home/julius/Desktop/web/flask_env/bin/python3.7"
 }
